# unit-cooler

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .prettierrc  .ruff.toml  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  config.example.yaml  pyproject.toml  renovate.json
.github/workflows/: regression.yaml  test.yaml
.gitlab/: ci-local.yml
doc/: architecture.md
frontend/: eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AirConditioner.tsx  ConnectionStatus.tsx  CoolingMode.tsx  Footer.tsx  HazardBanner.tsx  Header.tsx  History.tsx  Log.tsx  OverrideControl.tsx  Sensor.tsx  Watering.tsx
frontend/src/components/common/: AnimatedNumber.tsx  Card.tsx  DashboardCard.tsx  DateDisplay.tsx  EmptyValue.tsx  ErrorBoundary.tsx  ErrorMessage.tsx  FrequencyHeatBar.tsx  Loading.tsx  Pagination.tsx  ProgressBar.tsx  Sparkline.tsx  Unit.tsx
frontend/src/components/icons/: index.tsx
frontend/src/hooks/: useApi.ts  useDashboardData.ts  useEventSource.ts
frontend/src/lib/: ApiResponse.ts  ApiResponse.tsx  Util.ts  api.ts  datetime.ts  dayjs.ts
frontend/src/types/: common.ts
kubernetes/: unit-cooler.yml
react/: package-lock.json  package.json
react/src/: App.css  App.tsx  index.css
react/src/components/: AirConditioner.tsx  CoolingMode.tsx  History.tsx  Log.tsx  Sensor.tsx  Watering.tsx
react/src/components/common/: AnimatedNumber.tsx  Loading.tsx
react/src/components/icons/: index.tsx
schema/: config.schema  sqlite.schema
src/: actuator.py  controller.py  healthz.py  webui.py
src/unit_cooler/: cli.py  config.py  const.py  messages.py  state_manager.py  util.py
src/unit_cooler/actuator/: control.py  monitor.py  override.py  sensor.py  status_publisher.py  valve.py  valve_controller.py  web_server.py  work_log.py  worker.py
src/unit_cooler/actuator/webapi/: flow_status.py  hazard.py  override.py  valve_status.py
src/unit_cooler/controller/: engine.py  message.py  sensor.py
src/unit_cooler/metrics/: __init__.py  analyzer.py  collector.py  energy.py
src/unit_cooler/metrics/webapi/: page.py
src/unit_cooler/metrics/webapi/static/: metrics.css  metrics.js
src/unit_cooler/metrics/webapi/templates/: metrics.html
src/unit_cooler/pubsub/: publish.py  subscribe.py
src/unit_cooler/webui/: worker.py
src/unit_cooler/webui/webapi/: cooler_stat.py
tests/: conftest.py  test_basic.py  test_error_handling.py  test_helpers.py  test_playwright.py
tests/.deprecated/: test_basic.py  test_error_handling.py
tests/e2e/: conftest.py  test_webui.py
tests/fixtures/: __init__.py  fd_q10c_mocks.py  gpio_mocks.py  mock_factories.py  sensor_data.py
tests/helpers/: __init__.py  assertions.py  component_manager.py  port_manager.py  time_utils.py
tests/integration/: conftest.py  test_actuator.py  test_api_schema.py  test_controller.py  test_controller_actuator.py  test_full_system.py  test_webui.py
tests/unit/: conftest.py  test_config.py  test_const.py  test_entrypoints.py  test_healthz.py  test_messages.py  test_state_manager.py  test_util.py
tests/unit/actuator/: test_control.py  test_monitor.py  test_override.py  test_sensor.py  test_status_publisher.py  test_valve.py  test_valve_controller.py  test_web_server.py  test_webapi.py  test_work_log.py  test_worker.py
tests/unit/controller/: test_engine.py  test_message.py  test_sensor.py
tests/unit/metrics/: __init__.py  test_analyzer.py  test_collector.py  test_energy.py  test_roundtrip.py
tests/unit/metrics/webapi/: test_page.py
tests/unit/pubsub/: test_publish.py  test_subscribe.py
tests/unit/webui/: test_cooler_stat.py  test_worker.py
